Fix context menu misalignment with icons with different widths

--- a/src/shared/style/shared.css
+++ b/src/shared/style/shared.css
@@ -82,7 +82,9 @@ button.btn-active-fwl {
 }
 
 .dropdown-menu-fwl > li > i:first-child {
+	width: 1.2em;
 	margin-right: 8px;
+	text-align: center;
 }
 
 .dropdown-menu-fwl > li > div {
